--- a/assets/css/templates/frontend.css
+++ b/assets/css/templates/frontend.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .dialog-widget-content {
   background-color: #fff;
   position: absolute;
@@ -1589,6 +1590,247 @@ ul.qazana-icon-list-items.qazana-inline-items {
 body.qazana-page .qazana-widget-menu-anchor {
   margin-bottom: 0; }
 
+.qazana-widget-menu-nav .qazana-widget-container {
+  display: flex;
+  flex-direction: row; }
+
+.qazana-widget-menu-nav:not(.qazana-menu-nav--toggle) .qazana-menu-toggle {
+  display: none; }
+
+.qazana-menu-nav {
+  position: relative;
+  z-index: 2; }
+  .qazana-menu-nav:after {
+    content: "\00a0";
+    display: block;
+    height: 0;
+    font: 0px/0 serif;
+    clear: both;
+    visibility: hidden;
+    overflow: hidden; }
+  .qazana-menu-nav--dropdown .qazana-item:hover,
+  .qazana-menu-nav--dropdown .qazana-item:focus,
+  .qazana-menu-nav--dropdown .qazana-item.highlighted,
+  .qazana-menu-nav--dropdown .qazana-item.qazana-item-active,
+  .qazana-menu-nav .qazana-sub-item:hover,
+  .qazana-menu-nav .qazana-sub-item:focus,
+  .qazana-menu-nav .qazana-sub-item.highlighted,
+  .qazana-menu-nav .qazana-sub-item.qazana-item-active {
+    background-color: #55595c;
+    color: #fff; }
+  .qazana-menu-nav .qazana-menu-toggle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    padding: 0.25em;
+    cursor: pointer;
+    border: 0 solid;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0.05);
+    color: #494c4f; }
+  .qazana-menu-nav .qazana-menu-toggle i:before {
+    content: '\e804'; }
+  .qazana-menu-nav .qazana-menu-toggle.qazana-active i:before {
+    content: '\e909'; }
+  .qazana-menu-nav--main .qazana-menu-nav a {
+    transition: 0.4s; }
+  .qazana-menu-nav--main .qazana-menu-nav a,
+  .qazana-menu-nav--main .qazana-menu-nav a:hover,
+  .qazana-menu-nav--main .qazana-menu-nav a:focus,
+  .qazana-menu-nav--main .qazana-menu-nav a.highlighted {
+    padding: 13px 20px; }
+  .qazana-menu-nav--main .qazana-menu-nav a.current {
+    background: #373a3c;
+    color: #fff; }
+  .qazana-menu-nav--main .qazana-menu-nav a.disabled {
+    background: #55595c;
+    color: #a1a6a9; }
+  .qazana-menu-nav--main .qazana-menu-nav ul {
+    position: absolute;
+    width: 12em;
+    border-width: 0;
+    border-style: solid;
+    padding: 0; }
+  .qazana-menu-nav--main .qazana-menu-nav span.scroll-up,
+  .qazana-menu-nav--main .qazana-menu-nav span.scroll-down {
+    position: absolute;
+    display: none;
+    visibility: hidden;
+    overflow: hidden;
+    background: #fff;
+    height: 20px; }
+  .qazana-menu-nav--main .qazana-menu-nav span.scroll-up-arrow,
+  .qazana-menu-nav--main .qazana-menu-nav span.scroll-down-arrow,
+  .qazana-menu-nav--main .qazana-menu-nav span.scroll-down-arrow {
+    position: absolute;
+    top: -2px;
+    left: 50%;
+    margin-left: -8px;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    border-width: 8px;
+    border-style: dashed dashed solid dashed;
+    border-color: transparent transparent #494c4f transparent; }
+  .qazana-menu-nav--main .qazana-menu-nav span.scroll-down-arrow {
+    top: 6px;
+    border-style: solid dashed dashed dashed;
+    border-color: #494c4f transparent transparent transparent; }
+  .qazana-menu-nav--main .qazana-menu-nav--dropdown .sub-arrow i {
+    transform: rotate(-90deg); }
+  .qazana-menu-nav--layout-horizontal {
+    display: flex; }
+  .qazana-menu-nav--layout-horizontal .qazana-menu-nav {
+    display: flex;
+    flex-wrap: wrap; }
+  .qazana-menu-nav--layout-horizontal .qazana-menu-nav a {
+    white-space: nowrap; }
+  .qazana-menu-nav__align-right .qazana-menu-nav {
+    margin-left: auto;
+    justify-content: flex-end; }
+  .qazana-menu-nav__align-right .qazana-menu-nav--layout-vertical > ul > li > a {
+    justify-content: flex-end; }
+  .qazana-menu-nav__align-left .qazana-menu-nav {
+    margin-right: auto;
+    justify-content: flex-start; }
+  .qazana-menu-nav__align-left .qazana-menu-nav--layout-vertical > ul > li > a {
+    justify-content: flex-start; }
+  .qazana-menu-nav__align-center .qazana-menu-nav {
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center; }
+  .qazana-menu-nav__align-center .qazana-menu-nav--layout-vertical > ul > li > a {
+    justify-content: center; }
+  .qazana-menu-nav__align-justify .qazana-menu-nav--layout-horizontal .qazana-menu-nav {
+    width: 100%; }
+  .qazana-menu-nav__align-justify .qazana-menu-nav--layout-horizontal .qazana-menu-nav > li {
+    flex-grow: 1; }
+  .qazana-menu-nav__align-justify .qazana-menu-nav--layout-horizontal .qazana-menu-nav > li > a {
+    justify-content: center; }
+  .qazana-menu-nav,
+  .qazana-menu-nav ul,
+  .qazana-menu-nav li {
+    display: block;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    line-height: normal;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  .qazana-menu-nav ul {
+    display: none; }
+  .qazana-menu-nav ul ul a,
+  .qazana-menu-nav ul ul a:hover,
+  .qazana-menu-nav ul ul a:focus,
+  .qazana-menu-nav ul ul a:active {
+    border-left: 16px solid transparent; }
+  .qazana-menu-nav ul ul ul a,
+  .qazana-menu-nav ul ul ul a:hover,
+  .qazana-menu-nav ul ul ul a:focus,
+  .qazana-menu-nav ul ul ul a:active {
+    border-left: 24px solid transparent; }
+  .qazana-menu-nav ul ul ul ul a,
+  .qazana-menu-nav ul ul ul ul a:hover,
+  .qazana-menu-nav ul ul ul ul a:focus,
+  .qazana-menu-nav ul ul ul ul a:active {
+    border-left: 32px solid transparent; }
+  .qazana-menu-nav ul ul ul ul ul a,
+  .qazana-menu-nav ul ul ul ul ul a:hover,
+  .qazana-menu-nav ul ul ul ul ul a:focus,
+  .qazana-menu-nav ul ul ul ul ul a:active {
+    border-left: 40px solid transparent; }
+  .qazana-menu-nav li,
+  .qazana-menu-nav a {
+    position: relative; }
+  .qazana-menu-nav li {
+    border-width: 0; }
+  .qazana-menu-nav a {
+    display: flex;
+    align-items: center; }
+  .qazana-menu-nav a,
+  .qazana-menu-nav a:hover,
+  .qazana-menu-nav a:focus {
+    padding: 10px 20px;
+    line-height: 20px; }
+  .qazana-menu-nav a.current {
+    background: #373a3c;
+    color: #fff; }
+  .qazana-menu-nav a.disabled {
+    cursor: not-allowed;
+    color: #a1a6a9; }
+  .qazana-menu-nav--indicator-none .qazana-menu-nav .qazana-item.has-submenu {
+    padding-right: 20px; }
+  .qazana-menu-nav--indicator-none .qazana-menu-nav .qazana-item.has-submenu .sub-arrow {
+    display: none; }
+  .qazana-menu-nav--indicator-plus:before {
+    font-family: "Open Sans", sans-serif; }
+  .qazana-menu-nav--indicator-chevron .qazana-menu-nav .sub-arrow {
+    font-size: 10px; }
+  .qazana-menu-nav--indicator-chevron .qazana-menu-nav .sub-arrow i:before {
+    content: ''; }
+  .qazana-menu-nav--indicator-angle .qazana-menu-nav .sub-arrow i:before {
+    content: ''; }
+  .qazana-menu-nav--indicator-classic .qazana-menu-nav .sub-arrow i:before {
+    content: ''; }
+  .qazana-menu-nav--indicator-plus .qazana-menu-nav .sub-arrow i:before {
+    content: '+'; }
+  .qazana-menu-nav .sub-arrow {
+    font-size: 16px;
+    line-height: 1;
+    padding: 10px 0 10px 10px;
+    margin-top: -10px;
+    margin-bottom: -10px; }
+  .qazana-menu-nav .sub-arrow i {
+    pointer-events: none; }
+  .qazana-menu-nav--dropdown {
+    background-color: #fff;
+    font-size: 13px; }
+  .qazana-menu-nav--dropdown.qazana-menu-nav__container {
+    margin-top: 10px;
+    transition: max-height 0.3s, transform 0.3s;
+    transform-origin: top;
+    overflow: auto; }
+  .qazana-menu-nav--dropdown.qazana-menu-nav__container .qazana-sub-item {
+    font-size: 0.85em; }
+  .qazana-menu-nav--dropdown a {
+    color: #494c4f;
+    justify-content: space-between; }
+  .qazana-menu-nav--dropdown a.current {
+    background: #373a3c;
+    color: #fff; }
+  .qazana-menu-nav--dropdown a.disabled {
+    color: #b3b2b2; }
+  .qazana-menu-nav--dropdown a,
+  .qazana-menu-nav--dropdown a:hover,
+  .qazana-menu-nav--dropdown a:focus {
+    text-shadow: none;
+    border-left: 8px solid transparent; }
+  .qazana-menu-nav__text-align-center .qazana-menu-nav--dropdown .qazana-menu-nav a {
+    justify-content: center; }
+  .qazana-menu-nav--toggle .qazana-menu-toggle:not(.qazana-active) + .qazana-menu-nav__container {
+    transform: scaleY(0);
+    max-height: 0; }
+  .qazana-menu-nav--toggle .qazana-menu-toggle.qazana-active + .qazana-menu-nav__container {
+    transform: scaleY(1);
+    max-height: 100vh; }
+  .qazana-menu-nav--stretch .qazana-menu-nav__container.qazana-menu-nav--dropdown {
+    position: absolute;
+    z-index: 9998; }
+  @media (min-width: QAZANA_SCREEN_MD_MIN) {
+    .qazana-menu-nav--dropdown-mobile .qazana-menu-nav--dropdown,
+    .qazana-menu-nav--dropdown-mobile .qazana-menu-toggle {
+      display: none; } }
+  @media (min-width: QAZANA_SCREEN_LG_MIN) {
+    .qazana-menu-nav--dropdown-tablet .qazana-menu-nav--dropdown,
+    .qazana-menu-nav--dropdown-tablet .qazana-menu-toggle {
+      display: none; } }
+  @media (max-width: QAZANA_SCREEN_MD_MAX) {
+    .qazana-menu-nav--dropdown-tablet .qazana-menu-nav--main {
+      display: none; } }
+  @media (max-width: QAZANA_SCREEN_SM_MAX) {
+    .qazana-menu-nav--dropdown-mobile .qazana-menu-nav--main {
+      display: none; } }
+
 .qazana-widget-progress {
   text-align: left; }
 
@@ -2470,11 +2712,13 @@ body.qazana-page .qazana-widget-menu-anchor {
     position: absolute;
     top: 50%;
     z-index: 4;
+    width: 34px;
+    height: 34px;
     border: 2px solid white;
     border-radius: 4px;
     text-align: center;
     font-size: 10px;
-    line-height: 1;
+    line-height: 32px;
     cursor: pointer;
     transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95);
     transform: translateY(-50%);
