--- a/assets/dev/scss/frontend/_widgets.scss
+++ b/assets/dev/scss/frontend/_widgets.scss
@@ -16,6 +16,7 @@
 @import "widgets/image";
 @import "widgets/link";
 @import "widgets/menu-anchor";
+@import "widgets/menu-nav";
 @import "widgets/progress";
 @import "widgets/social-icons";
 @import "widgets/star-rating";
